--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.0",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.9",
     "next": "^10.0.4",
     "nprogress": "^0.2.0",
@@ -20,6 +23,7 @@
     "react-dom": "^17.0.1",
     "semantic-ui-react": "^2.0.1",
     "shortid": "^2.2.16",
+    "uuid": "^8.3.2",
     "validator": "^13.5.2"
   }
 }
