--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "nprogress": "^0.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "semantic-ui-react": "^2.0.1",
     "shortid": "^2.2.16",
+    "stripe": "^8.129.0",
     "uuid": "^8.3.2",
     "validator": "^13.5.2"
   }
