--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-stripe-checkout": "^2.6.3",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
     "shortid": "^2.2.16",
     "stripe": "^8.129.0",
